--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <div class="container">
         <h1>Attackerspace</h1>
-        <h2>In collaboration with OWASP Boulder</h2>
+        <h2>A collaboration with OWASP Boulder</h2>
 
         <section id="downloads">
           <a href="https://github.com/attackerspace" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
@@ -27,29 +27,40 @@
     <div class="container">
       <section id="main_content">
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="mission" class="anchor" href="#mission" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Mission</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>The Attackerspace will be an open meeting place for collaboration, outreach, training, hackathons, movies nights, and generally accessing hardware, software, and tools not easily accessed by individuals. Unlike other hackerspaces and makerspaces, the Attackerspace specifically emphasizes information security and related topics.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="the-lab" class="anchor" href="#the-lab" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Lab</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>The lab is actively building out the the physical architecture. When finished, the lab will contain the following core elements:</p>
+
+<ul>
+<li>
+<strong>WaspNest CTF:</strong> Stop by to live, or contact us to host WaspNest at your next event</li>
+<li>
+<strong>Wireless lab:</strong> Commercial and enterprise WAPs for securing and attacking</li>
+<li>
+<strong>Mobile lab:</strong> A variety of rooted and unrooted Android and iOS targets </li>
+<li>
+<strong>Training lab:</strong> Endpoints and a PXE server for training use</li>
+<li>
+<strong>Cisco stack:</strong> One of the biggest obstacles in CCNA training is acquiring practice gear; come use ours</li>
+<li>
+<strong>Lock picks:</strong> And practice locks</li>
+<li>
+<strong>Community library:</strong> Books, movies, and games</li>
+<li>
+<strong>Infosec archives:</strong> Video training, slides, password lists, POC code, VMs, and more</li>
+</ul>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="lab-staff" class="anchor" href="#lab-staff" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Lab Staff</h3>
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Mark (<a href="https://github.com/mjmajor" class="user-mention">@mjmajor</a>)
+Chris (<a href="https://github.com/xunil154" class="user-mention">@xunil154</a>)
+Cale (<a href="https://github.com/terrorbyte" class="user-mention">@terrorbyte</a>)</p>
       </section>
     </div>
 
